# PhantasmEngine2D

./: CMakeLists.txt  README.md
include/PhEngine/: ContentManager.h  Exception.h  Game.h  GameDraw.h  GameUpdate.h  GraphicsDevice.h  Monitor.h  Resolution.h  TaskExecutor.h  TextureAtlas.h  Window.h
include/PhEngine/Graphics/: AtlasRef.h  BatchRenderer.h  Colour.h  GL.h  GLDefs.h  Shader.h  SpriteFont.h  Texture2D.h
include/PhEngine/Internal/: Setup.h
include/PhEngine/Math/: MathInternal.h  Matrix.h  Matrix4.h  Rectangle.h  Vector.h  Vector2.h  Vector3.h  Vector4.h
include/PhEngine/OldMath/: Calculator.h  Matrix4.h
include/glad/: gl.h  gl_debug.h
src/: ContentManager.cpp  GL.cpp  GL_Debug.cpp  Game.cpp  GameUpdate.cpp  GraphicsDevice.cpp  Monitor.cpp  TaskExecutor.cpp  TextureAtlas.cpp  Window.cpp
src/Graphics/: BatchRenderer.cpp  GL.cpp  Shader.cpp  SpriteFont.cpp
src/Math/: Calculator.cpp  Matrix4.cpp  Vector4.cpp
src/OldMath/: Calculator.cpp  Rectangle.cpp  Vector2.cpp  Vector3.cpp
src/Win64/: GraphicsDevice.cpp  Window.cpp
